Refactor : frontend code and update backend API endpoints
