# purchasing-backend/cmd/server/main.go
@@ -15,7 +15,25 @@ import (
 	"purchasing-backend/routes"
 )
 
+// @title			Purchasing Backend API
+// @version		1.0
+// @description	API untuk Purchasing System Fleetify
+// @termsOfService	http://swagger.io/terms/
 
+// @contact.name	API Support
+// @contact.url	http://www.swagger.io/support
+// @contact.email	support@swagger.io
+
+// @license.name	Apache 2.0
+// @license.url	http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host			localhost:3000
+// @BasePath		/api
+
+// @securityDefinitions.apikey	Bearer
+// @in							header
+// @name						Authorization
+// @description				Type "Bearer" followed by a space and JWT token.
 
 func main() {
 	_ = godotenv.Load()
